--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,7 +3,15 @@
     <style name="Base.Theme.TodoApp" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+
+        <item name="android:statusBarColor">@color/background_app</item>
     </style>
 
     <style name="Theme.TodoApp" parent="Base.Theme.TodoApp" />
+
+    <style name="Subtitle">
+        <item name="textAllCaps">true</item>
+        <item name="android:textColor">@color/subtitle_text</item>
+        <item name="android:layout_marginHorizontal">32dp</item>
+    </style>
 </resources>
