--- a/app/src/main/res/layout/dialog_task.xml
+++ b/app/src/main/res/layout/dialog_task.xml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="250dp"
     android:layout_height="wrap_content"
     android:background="@color/background_app"
     android:gravity="center"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:padding="20dp">
 
     <EditText
+        android:id="@+id/etTask"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:backgroundTint="@color/white"
@@ -23,26 +26,36 @@
             android:id="@+id/rbBusiness"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:buttonTint="@color/business_category"
             android:checked="true"
             android:text="Negocios"
-            android:textColor="@color/white" />
+            android:textColor="@color/white"
+            app:buttonTint="@color/business_category" />
 
         <RadioButton
             android:id="@+id/rbPersonal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:buttonTint="@color/personal_category"
             android:text="Personal"
-            android:textColor="@color/white" />
+            android:textColor="@color/white"
+            app:buttonTint="@color/personal_category" />
 
         <RadioButton
             android:id="@+id/rbOther"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:buttonTint="@color/other_category"
             android:text="Otros"
-            android:textColor="@color/white" />
+            android:textColor="@color/white"
+            app:buttonTint="@color/other_category" />
 
     </RadioGroup>
+
+
+    <Button
+        android:id="@+id/btnAddTask"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:backgroundTint="@color/accent"
+        android:text="Crear Tarea"
+        android:textColor="@color/white" />
+
 </LinearLayout>
